--- a/app/assets/stylesheets/algebra.scss
+++ b/app/assets/stylesheets/algebra.scss
@@ -1,3 +1,26 @@
 // Place all the styles related to the algebra controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+h1 {
+  text-align: center;
+  font-family: 'Oswald', Helvetica, sans-serif;
+  font-size: 100px;
+  letter-spacing: 4px;
+  word-spacing: -8px;
+  color: darkblue;
+  text-shadow:
+          -1px -1px 0 #5280e2,
+          -2px -2px 0 #5280e2,
+          -3px -3px 0 #5280e2,
+          -4px -4px 0 #5280e2,
+          -5px -5px 0 #5280e2,
+          -6px -6px 0 #5280e2,
+          -7px -7px 0 #5280e2,
+          -8px -8px 0 #5280e2,
+          -30px 20px 40px dimgrey
+}
+
+IO {
+
+}
