modifications to alebra(add/sum) page

--- a/app/assets/stylesheets/algebra.scss
+++ b/app/assets/stylesheets/algebra.scss
@@ -21,6 +21,16 @@ h1 {
           -30px 20px 40px dimgrey
 }
 
+
+
+h3 {
+  color: darkblue;
+  font-family: 'Open Sans', sans-serif; font-size: 34px;
+  font-weight: 300;
+  line-height: 40px;
+  margin: 0 0 16px;
+}
+
 IO {
 
 }
